# groep-ta-2020-2021-pierre-jorden-en-gilles

./: .gitignore  CMakeLists.txt  Cell.cpp  Cell.h  README.md  System.cpp  System.h  TA_tegenwoensdag_12.05.docx  TO-groep voortgangsrapport.xlsx  Virus.cpp  Virus.h  board.cpp  board.h  graph.cpp  graph.h  graph.ui  main.cpp  simulationsettings.cpp  simulationsettings.h  simulationsettings.ui  statusscreen.cpp  statusscreen.h  statusscreen.ui  virussettings.cpp  virussettings.h  virussettings.ui
